<resources>
    <string name="app_name">Smart Cab Allocation</string>
    <string name="enter_details">Enter Details</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_number">Enter your Number</string>
    <string name="new_user">New User ?</string>
    <string name="already_registered">Already registered ?</string>
    <string name="rent_car">Rent Car</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="my_bookings">My Bookings</string>
    <string name="profile">Profile</string>
    <string name="book_your_ride">Book Your Ride</string>
    <string name="recommended">Recommended</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="all_drivers">All Drivers</string>
    <string name="free_drivers">Free Drivers</string>
    <string name="add_driver">Add Driver</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="enter_the_longitude">Enter the Longitude</string>
    <string name="enter_the_latitude">Enter the Latitude</string>
</resources>