<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/all_drivers"
            android:icon="@drawable/ic_baseline_car_rental_24"
            android:title="@string/all_drivers" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />

        <item
            android:id="@+id/my_bookings"
            android:icon="@drawable/ic_baseline_task_24"
            android:title="@string/my_bookings" />

    </group>

    <group>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/log_out" />
    </group>

</menu>